--- a/src/common/css/home.less
+++ b/src/common/css/home.less
@@ -2,6 +2,76 @@ body{margin:0;padding:0;overflow:hidden;}
 html {
   background: linear-gradient(-190deg, #4A4EA4 65%, #E884A1);
 }
+a{
+  text-decoration: none;
+}
+@link-color: #ffbf00;
+
+@keyframes imgScale{
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+
+  50%{
+    transform: scale3d(1.3, 1.3, 1.3);
+  }
+
+  100%{
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.main-show{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .img-wrapper{
+    margin: -200px 0 60px;
+    width: 180px;
+    height: 180px;
+    overflow: hidden;
+    position: relative;
+    border-radius: 50%;
+    animation: 3s ease-in 1s infinite imgScale ;
+    img{
+      width: 180px;
+      height: 180px;
+      top: -40px;
+    }
+  }
+  .link-wrapper{
+    display: flex;
+    align-items: center;
+    .link{
+      padding: 2px 10px;
+      color: @link-color;
+      font-weight: 500;
+      font-size: 18px;
+      min-width: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &:link{
+        color: @link-color;
+      }
+      &:visited{
+        color: @link-color;
+      }
+      &:hover{
+        color: #ff471a;
+      }
+      &:active{
+        color:@link-color;
+      }
+    }
+  }
+}
+
+
 .loader {
   background: linear-gradient(-190deg, #4A4EA4 65%, #E884A1);
   bottom: 0;
