--- a/src/common/css/home.less
+++ b/src/common/css/home.less
@@ -29,6 +29,7 @@ a{
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80%;
   .img-wrapper{
     margin: -200px 0 60px;
     width: 180px;
@@ -46,6 +47,7 @@ a{
   .link-wrapper{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     .link{
       padding: 2px 10px;
       color: @link-color;
@@ -55,6 +57,7 @@ a{
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-bottom: 10px;
       &:link{
         color: @link-color;
       }
